@@ -14,6 +14,8 @@ New Features
 Bug Fixes
 
 - Fixed MySQL date-time type for milliseconds; improved example conf for XA
+- If there are errors in screen actions the error message is displayed
+  instead of rendering the widgets (usually just resulting in more errors)
 
 ===========================================================================
 Release 1.6.0 - 17 Jan 2016
